# typedef/OfficesRoute.ts
@@ -9,9 +9,25 @@
  * ---------------------------------------------------------------
  */
 
-import { Money, Office, OfficeInput } from "./data-contracts";
+import { Money, Office, OfficeAmenity, OfficeInput } from "./data-contracts";
 
 export namespace Offices {
+  /**
+   * @description Returns an array of office amenity objects that can be assigned to offices
+   * @tags Offices
+   * @name GetOfficeAmenities
+   * @summary Retrieve list of possible office amenities
+   * @request GET:/offices/amenities
+   * @response `200` `(OfficeAmenity)[]` Successful operation
+   */
+  export namespace GetOfficeAmenities {
+    export type RequestParams = {};
+    export type RequestQuery = {};
+    export type RequestBody = never;
+    export type RequestHeaders = {};
+    export type ResponseBody = OfficeAmenity[];
+  }
+
   /**
    * No description
    * @tags Offices
